--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <option value="vcard">Carte de visite</option>
                     <option value="url">URL</option>
                     <option value="email">Email</option>
+                    <option value="gcmConnexion">GCM Connexion</option>
                 </select>
             </div>
 
@@ -85,6 +86,7 @@
                     <option value="code128">Code 128 (général)</option>
                     <option value="code39">Code 39 (industrie)</option>
                     <option value="upc">UPC (produits américains)</option>
+                    <option value="gcmConnexion">GCM Connexion</option>
                 </select>
             </div>
 
